--- a/DarkestDungeon/DarkestDungeon.vcxproj.filters
+++ b/DarkestDungeon/DarkestDungeon.vcxproj.filters
@@ -76,6 +76,15 @@
     <ClCompile Include="src\CharacterContainer.cpp">
       <Filter>Scenes\Dev1\General</Filter>
     </ClCompile>
+    <ClCompile Include="Character.cpp">
+      <Filter>Scenes\Dev1\Character\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="Slot.cpp">
+      <Filter>Scenes\Dev1\Character\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterContainer.cpp">
+      <Filter>Scenes\Dev1\Battle\Monster</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Framework.h">
@@ -162,6 +171,24 @@
     <ClInclude Include="src\CharacterContainer.h">
       <Filter>Scenes\Dev1\General</Filter>
     </ClInclude>
+    <ClInclude Include="Character.h">
+      <Filter>Scenes\Dev1\Character\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="Framework\FZLog.hpp">
+      <Filter>Framework\8.Log</Filter>
+    </ClInclude>
+    <ClInclude Include="Skill.h">
+      <Filter>Scenes\Dev1\Character\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Slot.h">
+      <Filter>Scenes\Dev1\Character\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="SkillCrusader.h">
+      <Filter>Scenes\Dev1\Character\Skill\SkillCrusader</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterContainer.h">
+      <Filter>Scenes\Dev1\Battle\Monster</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Framework">
@@ -238,6 +265,21 @@
     </Filter>
     <Filter Include="Scenes\Dev1\Character\Crusader">
       <UniqueIdentifier>{cadcf017-1db3-4bd4-bff7-798e4bb10174}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scenes\Dev1\Character\Base">
+      <UniqueIdentifier>{816f5375-e50f-4095-910c-4f8db4d932a8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Framework\8.Log">
+      <UniqueIdentifier>{2691c827-c077-4dc9-92fe-3d42d2a6e434}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scenes\Dev1\Character\Skill">
+      <UniqueIdentifier>{9e4726b2-bd5f-4cbd-9356-bb5005928d2b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scenes\Dev1\Character\Skill\SkillCrusader">
+      <UniqueIdentifier>{439c5317-7fee-4cf3-9f2a-98245a0b9665}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scenes\Dev1\Battle\Monster">
+      <UniqueIdentifier>{8a84d8fc-5023-49bb-b097-a6c4a5113823}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
