적 사망시 풀링 구현

--- a/DarkestDungeon/DarkestDungeon.vcxproj
+++ b/DarkestDungeon/DarkestDungeon.vcxproj
@@ -24,10 +24,14 @@
     <ClCompile Include="BattleManager.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ExploreManager.cpp" />
+    <ClCompile Include="Framework\DataTable.cpp" />
+    <ClCompile Include="Framework\DataTableMgr.cpp" />
     <ClCompile Include="Framework\HitBox.cpp" />
+    <ClCompile Include="Framework\StringTable.cpp" />
     <ClCompile Include="Framework\Variables.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterContainer.cpp" />
+    <ClCompile Include="NameFrame.cpp" />
     <ClCompile Include="Slot.cpp" />
     <ClCompile Include="src\CharacterContainer.cpp" />
     <ClCompile Include="src\Ball.cpp" />
@@ -56,11 +60,15 @@
     <ClInclude Include="BattleManager.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ExploreManager.h" />
+    <ClInclude Include="Framework\DataTable.h" />
+    <ClInclude Include="Framework\DataTableMgr.h" />
     <ClInclude Include="Framework\FZLog.hpp" />
     <ClInclude Include="Framework\HitBox.h" />
+    <ClInclude Include="Framework\StringTable.h" />
     <ClInclude Include="Framework\Variables.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterContainer.h" />
+    <ClInclude Include="NameFrame.h" />
     <ClInclude Include="Skill.h" />
     <ClInclude Include="SkillCrusader.h" />
     <ClInclude Include="SkillSkeletonMilitia.h" />
