--- a/DarkestDungeon/DarkestDungeon.vcxproj
+++ b/DarkestDungeon/DarkestDungeon.vcxproj
@@ -23,6 +23,8 @@
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BattleManager.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="DamageText.cpp" />
+    <ClCompile Include="DebuffText.cpp" />
     <ClCompile Include="ExploreManager.cpp" />
     <ClCompile Include="Framework\DataTable.cpp" />
     <ClCompile Include="Framework\DataTableMgr.cpp" />
@@ -59,6 +61,8 @@
     <ClInclude Include="Animator.h" />
     <ClInclude Include="BattleManager.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="DamageText.h" />
+    <ClInclude Include="DebuffText.h" />
     <ClInclude Include="ExploreManager.h" />
     <ClInclude Include="Framework\DataTable.h" />
     <ClInclude Include="Framework\DataTableMgr.h" />
